--- a/css/styles.css
+++ b/css/styles.css
@@ -375,7 +375,7 @@ h6 {
     .banner-content {
       padding: 0 3rem; } }
   .banner-content__email {
-    color: #4d4d4d;
+    color: #999999;
     font-family: "Charm"; }
 
 .banner-content__title {
@@ -395,28 +395,6 @@ h6 {
   @media screen and (min-width: 760px) {
     .banner-content__email {
       font-size: 34px; } }
-
-.banner-content-about {
-  opacity: 0;
-  animation: appear-text 0.0001s linear forwards;
-  animation-delay: 1.1s;
-  padding-left: 10px; }
-  @media screen and (min-width: 760px) {
-    .banner-content-about {
-      font-size: 24px; } }
-
-.about-me {
-  color: #999999; }
-  @media screen and (max-width: 850px) {
-    .about-me {
-      font-size: 56px; } }
-
-.about-description {
-  color: #4d4d4d;
-  margin-bottom: 20px; }
-  @media screen and (max-width: 850px) {
-    .about-description {
-      font-size: 12px; } }
 
 /* ######################### social-content ######################### */
 .social-content {
@@ -617,6 +595,42 @@ h6 {
 
 /* ################## end animation ################## */
 /* ######################### END HERO ######################### */
+/* ######################### ABOUT ######################### */
+.about-section {
+  width: 100%;
+  height: 100vh;
+  background: black;
+  color: #999999;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  border-top: 1px solid #333; }
+  @media screen and (min-width: 1020px) {
+    .about-section {
+      display: block;
+      padding: 0 2rem; } }
+  .about-section .about-overlay {
+    width: 100%; }
+  .about-section .about-center {
+    width: 90vw;
+    padding: 30px 0;
+    transform: translateY(20px);
+    transition: 0.5s all ease-in-out;
+    opacity: 0; }
+    .about-section .about-center h2 {
+      display: block;
+      padding-bottom: 30px; }
+    .about-section .about-center p {
+      display: block; }
+    @media screen and (min-width: 1020px) {
+      .about-section .about-center {
+        width: 100%;
+        padding: 200px 2rem; } }
+  .about-section .about-appear {
+    opacity: 1;
+    transform: translateY(0px); }
+
+/* ######################### END ABOUT ######################### */
 /* ######################### SKILLS ######################### */
 .skills-section {
   border-top: 1px solid #333;
@@ -664,7 +678,7 @@ h6 {
     text-align: center;
     /* ########## intro-appear-skills-list effect ############## */
     transform: translateY(20px);
-    transition: 0.4s all ease-in-out;
+    transition: 0.5s all ease-in-out;
     opacity: 0;
     /* ########## end intro-appear-skills-list effect ############## */ }
     .skills-center .skills-list li {
@@ -783,7 +797,7 @@ h6 {
   grid-row-gap: 2rem;
   padding-bottom: 4rem;
   transform: translateY(20px);
-  transition: 0.4s all ease-in-out;
+  transition: 0.5s all ease-in-out;
   opacity: 0; }
   @media screen and (min-width: 1300px) {
     .projects-center {
@@ -792,7 +806,7 @@ h6 {
 
 /* ######################### project-card ######################### */
 .project {
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.2);
   border-radius: 2px;
   position: relative; }
   .project h4 {
